klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/user/UserClassWithDuplicateUserIdErrorTest.klass
package com.errors

user User
{
    userId1: String key userId;
    userId2: String key userId;
}
